# TSFenwick.github.io

./: .gitignore  AGENTS.md  biome.json  build.py  data.toml  generate_qr.py  geocoding.py  geocoding_cache.json  index.html  my-readme.md  package-lock.json  package.json  pyproject.toml  validate_data.py
js/: logic.js  main.js
tests/: logic.test.js  test_build.py  test_generate_qr.py  test_geocoding.py  test_validate_data.py  ui.test.js
